<?xml version="1.0"?>
<package>
  <name>srscp</name>
  <version>0.0.0</version>
  <description>The srscp package</description>

  <maintainer email="chittaranjan.swaminathan@oru.se">Chittaranjan Srinivas Swaminathan</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <export>
  </export>
</package>
