<?xml version="1.0"?>
<package>
  <name>ompl_planners_ros</name>
  <version>0.0.0</version>
  <description>The ompl_planners_ros package</description>

  <maintainer email="chittaranjan.swaminathan@oru.se">Chittaranjan Srinivas Swaminathan</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cliffmap_ros</build_depend>
  <build_depend>costmap_2d</build_depend>
  
  <run_depend>costmap_2d</run_depend>
  <run_depend>cliffmap_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  
</package>
