<?xml version="1.0"?>
<package>
  <name>ompl_planners_ros</name>
  <version>0.0.5</version>
  <description>The ompl_planners_ros package</description>

  <maintainer email="chittaranjan.swaminathan@oru.se">Chittaranjan Srinivas Swaminathan</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cliffmap_ros</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ompl_mod_objectives</build_depend>
  <build_depend>mrpt1</build_depend>
  <build_depend>ompl</build_depend>

  <run_depend>ompl</run_depend>
  <run_depend>mrpt1</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>cliffmap_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>ompl_mod_objectives</run_depend>
  
</package>
